Fix: Fix the profile pic distortion and move the state variables to top of the their file

--- a/src/blocks/popup-edit.css
+++ b/src/blocks/popup-edit.css
@@ -67,7 +67,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+
   width: 100%;
   height: 100%;
 }
