--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -28,6 +28,7 @@
   border-radius: 50%;
   width: 120px;
   height: 120px;
+  object-fit: cover;
 }
 
 .profile__edit-picture {
